Skip to content

FTBFS: avformat: getting ch_channel error

@robUx4 @fcartegnie

An error is produced due to some changes in ch_layout. This might be due to this a55ec32a

Please check

CC       demux/avi/libavi.lo
  CCLD     libavi_plugin.la
  CC       demux/caf.lo
  CCLD     libcaf_plugin.la
  CC       demux/avformat/libavformat_plugin_la-demux.lo
../../modules/demux/avformat/demux.c: In function ‘get_dovi_config’:
../../modules/demux/avformat/demux.c:187:42: warning: unused parameter ‘fmt’ [-Wunused-parameter]
  187 | static void get_dovi_config(es_format_t *fmt, AVStream *s)
      |                             ~~~~~~~~~~~~~^~~
../../modules/demux/avformat/demux.c:187:57: warning: unused parameter ‘s’ [-Wunused-parameter]
  187 | static void get_dovi_config(es_format_t *fmt, AVStream *s)
      |                                               ~~~~~~~~~~^
../../modules/demux/avformat/demux.c: In function ‘avformat_OpenDemux’:
../../modules/demux/avformat/demux.c:474:43: error: ‘AVCodecParameters’ has no member named ‘ch_layout’; did you mean ‘channel_layout’?
  474 |             es_fmt.audio.i_channels = cp->ch_layout.nb_channels;
      |                                           ^~~~~~~~~
      |                                           channel_layout
../../modules/demux/avformat/demux.c:526:3: warning: #warning FIXME: implement palette transmission [-Wcpp]
  526 | # warning FIXME: implement palette transmission
      |   ^~~~~~~
make[4]: *** [Makefile:24129: demux/avformat/libavformat_plugin_la-demux.lo] Error 1
make[4]: Leaving directory '/home/djain/vlc/build/modules'
make[3]: *** [Makefile:30997: all-recursive] Error 1
make[3]: Leaving directory '/home/djain/vlc/build/modules'
make[2]: *** [Makefile:13962: all] Error 2
make[2]: Leaving directory '/home/djain/vlc/build/modules'
make[1]: *** [Makefile:1644: all-recursive] Error 1
make[1]: Leaving directory '/home/djain/vlc/build'
make: *** [Makefile:1531: all] Error 2
djain@Mitra:~/vlc/build$

../../modules/demux/avformat/demux.c: In function 'get_dovi_config':
WARNING : ../../modules/demux/avformat/demux.c:187: 42:  unused parameter 'fmt' [-Wunused-parameter]
  187 | static void get_dovi_config(es_format_t *fmt, AVStream *s)
      |                             ~~~~~~~~~~~~~^~~
WARNING : ../../modules/demux/avformat/demux.c:187: 57:  unused parameter 's' [-Wunused-parameter]
  187 | static void get_dovi_config(es_format_t *fmt, AVStream *s)
      |                                               ~~~~~~~~~~^
../../modules/demux/avformat/demux.c: In function 'avformat_OpenDemux':
ERROR   : ../../modules/demux/avformat/demux.c:474: 43:  'AVCodecParameters' has no member named 'ch_layout'; did you mean 'channel_layout'?
  474 |             es_fmt.audio.i_channels = cp->ch_layout.nb_channels;
      |                                           ^~~~~~~~~
      |                                           channel_layout
WARNING : ../../modules/demux/avformat/demux.c:526: 3:  #warning FIXME: implement palette transmission [-Wcpp]
  526 | # warning FIXME: implement palette transmission
      |   ^~~~~~~
make: *** [Makefile:1531: all] Error 2
djain@Mitra:~/vlc/build$
Edited by Darshan Jain
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information